--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus objetivos do ano</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <section class="conteudo-principal">
       <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+      <div class="conteudo">
       <div class="botoes">
         <button class="botao ativo">Cursos na Alura</button>
         <button class="botao">Criar projetos em Javascript</button>
@@ -30,13 +31,14 @@
         <div class="aba-conteudo">
           <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
           <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-          <div class="contador"></div>
+          <div class="contador"> </div>
         </div>
         <div class="aba-conteudo">
           <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
           <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
           <div class="contador"></div>
         </div>
+      </div>
       </div>
     </section>
     <script src="main.js/"></script>
